--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,7 @@
 
 export(fake_currencies)
 export(fake_masterdata_debt_datastore)
+export(fake_masterdata_ownership_datastore)
 export(validate_currencies)
 export(validate_masterdata_debt_datastore)
+export(validate_masterdata_ownership_datastore)
