validate raw masterdata ownership from AI

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,4 @@ export(validate_currencies)
 export(validate_financial_data)
 export(validate_masterdata_debt_datastore)
 export(validate_masterdata_ownership_datastore)
+export(validate_masterdata_ownership_datastore_ai)
