add validation for intermediate scenario files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,6 @@ export(validate_abcd_flags_bonds)
 export(validate_abcd_flags_equity)
 export(validate_currencies)
 export(validate_financial_data)
+export(validate_intermediate_scenario_output)
 export(validate_masterdata_debt_datastore)
 export(validate_masterdata_ownership_datastore)
