--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(fake_abcd_flags_bonds)
 export(fake_abcd_flags_equity)
 export(fake_currencies)
 export(fake_financial_data)
+export(fake_intermediate_scenario_data)
 export(fake_masterdata_debt_datastore)
 export(fake_masterdata_ownership_datastore)
 export(is_valid_isin)
@@ -11,5 +12,6 @@ export(validate_abcd_flags_bonds)
 export(validate_abcd_flags_equity)
 export(validate_currencies)
 export(validate_financial_data)
+export(validate_intermediate_scenario_output)
 export(validate_masterdata_debt_datastore)
 export(validate_masterdata_ownership_datastore)
