--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,3 @@
 url: https://rmi-pacta.github.io/pacta.data.validation
 template:
-  package: pacta.pkgdown.template
+  package: pacta.pkgdown.rmitemplate
